main.css
/* --------------------------- General Body Formatting ------------------- */
body{
	background: 513c3c;
	background-image: url('https://sphotos-b.xx.fbcdn.net/hphotos-prn1/543645_105693576281522_1252487849_n.jpg');
	margin: 0 auto;
	width: 1100px;	
}

/* -------------------------- Navigation Bar ------------------------- */

ul.nav{
margin-left: 10px;
padding: 0;
list-style-type: none;
overflow: hidden;
width: 800px;
}

ul.nav li{
float: left;
width: 100px;
}
 /* only affects nav block */
ul.nav li a{
text-decoration: none;
color: white;
background: -webkit-linear-gradient(top, silver, gray);
display: block;
height: 30px;
line-height: 30px;
text-align: center;
border-style: outset;
border-width: 5px;
border-color: green;
border-radius: 10px;
}
ul.nav li a:visited{
border-color: black;
}
ul.nav li a:hover{
border-color: orange;
}
ul.nav li a:active{
border-color: black;
}


/*-------------------------- General Paragraph Format ----------------*/
p{
	font-family: 'Roboto Condensed' Verdana sans-serif;
	width: 800px;
	color: white;
	margin: 10px;
	padding-bottom: 15px;
}


/*------------------------- Heading Formatting ----------------------*/

h1, h2, h3, h4, h5, h6{
	width: 800px;
	font-family: 'Share Tech Mono' Verdana sans-serif;
	color: white;
	margin:  10px;
	padding-bottom: 10px;
	text-shadow: 5px 5px 5px black;
}

/*----------------------- logo Formatting-----------------------------*/

#logo img{
	margin: 10px;
	
}

	
/*------------------------- Gallery Formatting (make thumbnails)------------------------*/

ol.gallery{
	list-style-type: none;
	overflow: hidden;
	margin: 0;
	padding: 0;
	height: 200px;
	width: 800px;
}
ol.gallery li{
	float: left;
	width: 100px;
	overflow: hidden;
}
ol.gallery li a{
	border: 5px outset green;
	display: block;
}
ol.gallery li a: visited{
	border: 5px outset black;
}
ol.gallery li a: hover{
	border: 5px outset orange;
}
ol.gallery li a: active{
	border: 5px outset black;
}
/*--------------------------- Footer Formatting -------------------------*/

footer{
	height: 50px;
	background: -webkit-linear-gradient(top, #38b638, #184f20) ;
	overflow: hidden;
}
footer p{
	font-family: Verdana;
	margin; 0 auto;
	padding-top: 10px;
}

/*-------------------------- CTA Button --------------------------------*/

h1.cta{
margin: 10px;
list-style-type: none;
overflow: hidden;
}
h1.cta a{
text-decoration: none;
color: white;
background: -webkit-linear-gradient(top, silver, gray);
display: block;
height: 30px;
width: 500px;
line-height: 30px;
text-align: center;
border-style: outset;
border-width: 5px;
border-color: green;
border-radius: 10px;
}
h1.cta a:visited{
border-color: black;
}
h1.cta a:hover{
border-color: orange;
}
h1.cta a:active{
border-color: black;
}

/*-------------------------- Aside Formatting --------------------------*/

aside {
	float: right;
	width: 200px;
	margin-right: 10px;
	overflow: hidden;	
}
aside p {
	text-align: center;
	width: 200px;
}
aside ol {
	list-style-type: none;
	width 200px;
}
aside ol li {
	width 200px;
	text-align: center;
}

aside ol li a{
	text-decoration: none;
	color: white;
	background: -webkit-linear-gradient(top, silver, gray);
	display: block;
	margin: 0 auto;
	padding: 50px;
	border: 5px outset green;
	
}

aside ol li a:visited {
	border: 5px outset black;
}

aside ol li a:hover {
	border: outset orange;
}

/*--------------------------------- Monster Paragraph Columns -----------------------------*/

section.monsters {
	-webkit-column-count: 2;
}

